# django-sandbox

./: LICENSE.md  pyproject.toml
core/: settings.py
